plugins {
    id 'java'
    id 'java-library'
    id "com.github.johnrengelman.shadow" version "7.1.2"
}

sourceCompatibility = '17'
targetCompatibility = '17'

group 'org.example'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

compileJava {
    options.encoding = 'UTF-8'
}

dependencies {
    implementation 'com.google.code.gson:gson:2.9.0'
    implementation 'org.jsoup:jsoup:1.14.3'
    implementation 'com.squareup.okhttp3:okhttp:4.9.3'
    testImplementation("org.junit.jupiter:junit-jupiter-api:5.8.2")
    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.8.2")
}

test {
    useJUnitPlatform()
}